# boids_rust

./: Cargo.toml  README.md  boids.yaml
src/: boids.rs  color_utils.rs  config.rs  main.rs  simulator.rs
