[package]
name = "boids_rust_par"
version = "0.1.2"
edition = "2024"
authors = ["Dakube <dakube@gmail.com>"]
description = "A Boids flocking simulation implemented in Rust with ggez."

[dependencies]
ggez = "0.9.3"
kdtree = "0.7.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.8.0", features = ["v4"] }
mint = "0.5"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
